--- a/CrmBL/CrmBL.csproj
+++ b/CrmBL/CrmBL.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -54,14 +55,14 @@
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Model\Cart.cs" />
     <Compile Include="Model\CashDesk.cs" />
-    <Compile Include="Model\Check.cs" />
-    <Compile Include="Model\CrmContext.cs" />
-    <Compile Include="Model\Customer.cs" />
+    <Compile Include="DataBase\Check.cs" />
+    <Compile Include="DataBase\CrmContext.cs" />
+    <Compile Include="DataBase\Customer.cs" />
     <Compile Include="Model\Generator.cs" />
-    <Compile Include="Model\Product.cs" />
-    <Compile Include="Model\Sell.cs" />
-    <Compile Include="Model\Seller.cs" />
-    <Compile Include="Model\ShopComputer.cs" />
+    <Compile Include="DataBase\Product.cs" />
+    <Compile Include="DataBase\Sell.cs" />
+    <Compile Include="DataBase\Seller.cs" />
+    <Compile Include="Model\ShopModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
